@@ -2687,7 +2687,6 @@ name|init
 argument_list|()
 expr_stmt|;
 comment|/* Authorize the request if        1. Authorization is enabled, and        2. The requested resource is not a known static file         */
-comment|// TODO: There should be a better way to ignore the static files.
 if|if
 condition|(
 name|cores
@@ -2696,49 +2695,6 @@ name|getAuthorizationPlugin
 argument_list|()
 operator|!=
 literal|null
-operator|&&
-operator|!
-operator|(
-name|req
-operator|.
-name|getRequestURI
-argument_list|()
-operator|.
-name|endsWith
-argument_list|(
-literal|".html"
-argument_list|)
-operator|||
-name|req
-operator|.
-name|getRequestURI
-argument_list|()
-operator|.
-name|endsWith
-argument_list|(
-literal|".png"
-argument_list|)
-operator|||
-name|req
-operator|.
-name|getRequestURI
-argument_list|()
-operator|.
-name|endsWith
-argument_list|(
-literal|".ico"
-argument_list|)
-operator|||
-name|req
-operator|.
-name|getRequestURI
-argument_list|()
-operator|.
-name|endsWith
-argument_list|(
-literal|".css"
-argument_list|)
-operator|)
 condition|)
 block|{
 name|AuthorizationContext
