@@ -18,36 +18,6 @@ end_package
 
 begin_import
 import|import
-name|java
-operator|.
-name|io
-operator|.
-name|ByteArrayInputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Properties
-import|;
-end_import
-
-begin_import
-import|import
 name|javax
 operator|.
 name|servlet
@@ -117,6 +87,70 @@ operator|.
 name|http
 operator|.
 name|HttpServletResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|ByteArrayInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Matcher
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Pattern
 import|;
 end_import
 
@@ -389,6 +423,14 @@ name|ModifiableSolrParams
 argument_list|()
 argument_list|)
 decl_stmt|;
+DECL|field|excludePatterns
+specifier|private
+name|ArrayList
+argument_list|<
+name|Pattern
+argument_list|>
+name|excludePatterns
+decl_stmt|;
 comment|/**    * Enum to define action that needs to be processed.    * PASSTHROUGH: Pass through to Restlet via webapp.    * FORWARD: Forward rewritten URI (without path prefix and core/collection name) to Restlet    * RETURN: Returns the control, and no further specific processing is needed.    *  This is generally when an error is set and returned.    * RETRY:Retry the request. In cases when a core isn't found to work with, this is set.    */
 DECL|enum|Action
 enum|enum
@@ -466,6 +508,62 @@ name|getClassLoader
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|String
+name|exclude
+init|=
+name|config
+operator|.
+name|getInitParameter
+argument_list|(
+literal|"excludePatterns"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|exclude
+operator|!=
+literal|null
+condition|)
+block|{
+name|String
+index|[]
+name|excludeArray
+init|=
+name|exclude
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+decl_stmt|;
+name|excludePatterns
+operator|=
+operator|new
+name|ArrayList
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|String
+name|element
+range|:
+name|excludeArray
+control|)
+block|{
+name|excludePatterns
+operator|.
+name|add
+argument_list|(
+name|Pattern
+operator|.
+name|compile
+argument_list|(
+name|element
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 try|try
 block|{
 name|Properties
@@ -969,6 +1067,69 @@ name|HttpServletRequest
 operator|)
 condition|)
 return|return;
+comment|// No need to even create the HttpSolrCall object if this path is excluded.
+if|if
+condition|(
+name|excludePatterns
+operator|!=
+literal|null
+condition|)
+block|{
+name|String
+name|servletPath
+init|=
+operator|(
+operator|(
+name|HttpServletRequest
+operator|)
+name|request
+operator|)
+operator|.
+name|getServletPath
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Pattern
+name|p
+range|:
+name|excludePatterns
+control|)
+block|{
+name|Matcher
+name|matcher
+init|=
+name|p
+operator|.
+name|matcher
+argument_list|(
+name|servletPath
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|matcher
+operator|.
+name|lookingAt
+argument_list|()
+condition|)
+block|{
+name|chain
+operator|.
+name|doFilter
+argument_list|(
+name|request
+argument_list|,
+name|response
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
+block|}
+block|}
 name|HttpSolrCall
 name|call
 init|=
